# vrtigo

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DEVELOPMENT.md  Makefile  README.md  release-please-config.json
.claude/: settings.local.json
.github/workflows/: ci.yml  pr-title-lint.yml  publish.yml  release-please.yml  wheel-smoke.yml
bindings/python/: CMakeLists.txt  README.md  pyproject.toml
bindings/python/src/: core_bindings.hpp  error_bindings.hpp  owning_packet_bindings.hpp  packet_view_bindings.hpp  py_types.hpp  reader_bindings.hpp  sample_framer_bindings.hpp  time_bindings.hpp  vrtigo_module.cpp
bindings/python/tests/: conftest.py  test_enums.py  test_file_reader.py  test_packets.py  test_sample_framer.py  test_time_types.py
cmake/: vrtigoConfig.cmake.in
docs/: README.md  cif_access.md  design.md  endianness-model.md  gpu-extensions.md  header_view.md  packet-spec-design.md  packet_accessors.md  python-bindings.md  quickstart.md  style.md  timestamp-math.md  trailer_fields.md  trailer_view.md
docs/cif_access/: cif0_15_payload_format.md  cif0_17_device_id.md  cif0_21_sample_rate.md  cif0_22_over_range_count.md  cif0_23_gain.md  cif0_24_reference_level.md  cif0_25_if_band_offset.md  cif0_26_rf_frequency_offset.md  cif0_26_rf_reference_frequency_offset.md  cif0_27_rf_reference_frequency.md  cif0_28_if_reference_frequency.md  cif0_29_bandwidth.md  cif0_30_reference_point_id.md  cif0_31_change_indicator.md  index.md
docs/quickstart/: context_packet.md  data_packet.md  file_reader.md  packet_parsing.md  python_timestamp_math.md  sample_clock.md  sample_framer.md
docs/utils/: io-helpers.md
examples/: CMakeLists.txt  basic_usage.cpp  context_example.cpp  file_parsing_example.cpp  timestamp_example.cpp  trailer_example.cpp
examples/python/psd_viewer/: README.md  demo.py  generate_test_signal.py  psd_viewer.py  requirements.txt  udp_transmitter.py
include/: vrtigo.hpp  vrtio.hpp
include/lvrt/core/: trailer.hpp
include/lvrt/packet/: builder.hpp  signal_packet.hpp
include/tl/: expected.hpp
include/vrtigo/: class_id.hpp  duration.hpp  dynamic.hpp  expected.hpp  field_tags.hpp  sample_span.hpp  timestamp.hpp  typed.hpp  types.hpp  vrtigo_gpu.hpp  vrtigo_io.hpp  vrtigo_utils.hpp
include/vrtigo/detail/: bitfield.hpp  bitfield_tag.hpp  builder.hpp  cif.hpp  compile_time_packet_base.hpp  context_packet.hpp  data_packet.hpp  device_identifier.hpp  field_access.hpp  field_proxy.hpp  field_traits.hpp  field_values.hpp  fixed_point.hpp  header_decode.hpp  layout_view.hpp  packet_concepts.hpp  packet_header_accessor.hpp  packet_parser.hpp  packet_variant.hpp  parse_error.hpp  parse_result.hpp  payload_format.hpp  prologue.hpp  runtime_context_packet.hpp  runtime_data_packet.hpp  runtime_packet_base.hpp  sample_traits.hpp  time_math.hpp  timestamp_traits.hpp  trailer.hpp  trailer_view.hpp
include/vrtigo/dynamic/: context_packet.hpp  data_packet.hpp  packet_base.hpp
include/vrtigo/gpu/: complex.hpp  complex_traits.hpp  endian.hpp  memory.hpp  packet_parser.hpp  pod_complex_adapter.hpp  raw_sample_io.hpp  sample_span_device.hpp  sample_traits_ext.hpp
include/vrtigo/typed/: context_packet.hpp  data_packet.hpp  packet_base.hpp
include/vrtigo/utils/: sample_clock.hpp  sample_framer.hpp  start_time.hpp
include/vrtio/: class_id.hpp  field_tags.hpp  fields.hpp  timestamp.hpp  types.hpp  vrtio_io.hpp  vrtio_utils.hpp
include/vrtio/core/: cif.hpp  concepts.hpp  field_access.hpp  field_values.hpp  fields.hpp  packet_concepts.hpp  timestamp.hpp  types.hpp
include/vrtio/detail/: buffer_io.hpp  builder.hpp  cif.hpp  concepts.hpp  context_packet.hpp  context_packet_view.hpp  data_packet.hpp  data_packet_view.hpp  (+11 more)
scripts/: extract_cif_access.sh  extract_docs.sh  extract_quickstart.sh  make-scripts-executable.sh
scripts/ci/: README.md  clang-build.sh  clang-tidy.sh  coverage.sh  debug-build.sh  format-check.sh  format-fix.sh  gpu-syntax-check.sh  gpu-test.sh  install-verify.sh  markdown_link_check.py  python-test.sh  quick-check.sh  version-check.sh
tests/: CMakeLists.txt  bitfield_test.cpp  builder_test.cpp  context_basic_test.cpp  context_cif1_test.cpp  context_cif2_test.cpp  context_cif3_test.cpp  context_integration_test.cpp  context_test.cpp  context_test_fixture.hpp  context_timestamp_test.cpp  context_validation_test.cpp  context_variable_test.cpp  duration_test.cpp  endian_test.cpp  field_access_test.cpp  packet_concepts_test.cpp  roundtrip_test.cpp  runtime_data_packet_test.cpp  sample_clock_test.cpp  sample_period_test.cpp  sample_span_test.cpp  security_test.cpp  signal_packet_view_test.cpp  start_time_test.cpp  timestamp_test.cpp  trailer_test.cpp  variable_packet_size_test.cpp
tests/cif/: CMakeLists.txt  cif1_test.cpp  cif2_test.cpp  cif3_test.cpp  payload_format_test.cpp  proxy_test.cpp  value_test.cpp
tests/cif_access/: CMakeLists.txt  README.md  cif0_15_payload_format_test.cpp  cif0_17_device_id_test.cpp  cif0_21_sample_rate_test.cpp  cif0_22_over_range_count_test.cpp  cif0_23_gain_test.cpp  cif0_24_reference_level_test.cpp  cif0_25_if_band_offset_test.cpp  cif0_26_rf_frequency_offset_test.cpp  cif0_26_rf_reference_frequency_offset_test.cpp  cif0_27_rf_reference_frequency_test.cpp  cif0_28_if_reference_frequency_test.cpp  cif0_29_bandwidth_test.cpp  cif0_30_reference_point_id_test.cpp  cif0_31_change_indicator_test.cpp
tests/core/: CMakeLists.txt  fixed_point_test.cpp  header_decode_test.cpp
tests/gpu/: compile_check.cu  complex_test.cu  integration_test.cu
tests/install_verification/: CMakeLists.txt  gpu_consumer.cu  minimal_consumer.cpp
tests/io/: CMakeLists.txt  enhanced_reader_test.cpp  file_reader_test.cpp  file_writer_test.cpp  pcap_reader_test.cpp  pcap_test_helpers.hpp  pcap_writer_test.cpp  sample_framer_test.cpp  test_utils.hpp  udp_reader_test.cpp  udp_writer_test.cpp
tests/quickstart/: CMakeLists.txt  README.md  context_packet_test.cpp  data_packet_test.cpp  file_reader_test.cpp  packet_parsing_test.cpp  python_timestamp_math_test.py  quickstart.order  sample_clock_test.cpp  sample_framer_test.cpp
(+34 files in other folders)
