[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.4.0", "numpy>=1.24"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.24"
wheel.install-dir = "."
cmake.define.VRTIGO_STANDALONE_PYTHON = "ON"

[project]
name = "vrtigo"
version = "0.1.0"
description = "Python bindings for VRTIGO VRT library"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
gui = ["pyqtgraph>=0.13", "PyQt6>=6.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
